--- a/bibleApp.css
+++ b/bibleApp.css
@@ -1524,7 +1524,8 @@ input:focus {
 /* DARKMODE SECTION *//* @media (prefers-color-scheme: dark) */
 .darkmode {
     --verse-hover: transparent;
-    --ref-img: rgb(0, 8, 2);
+    --ref-img: rgb(10, 9, 12);
+    --ref-img: rgb(8,4,0);
     --ref-img: rgb(18, 18, 18);
     --ref-img: rgb(0,0,0);
     --vmultiple-hover: rgb(0, 13, 13);
@@ -1540,9 +1541,11 @@ input:focus {
     --verse-higlight:rgb(18, 18, 18);
     --chpt:rgb(0, 25, 26);
     --chpt2: rgb(0, 0, 0);
-    --vhlt3: rgb(0, 8, 2);
+    --vhlt3: rgb(10, 9, 12);
+    --vhlt3: rgb(8,4,0);
     --whitesmoke: rgb(18, 18, 18);
-    --whitesmoke: rgb(0, 8, 2);
+    --whitesmoke: rgb(10, 9, 12);
+    --whitesmoke: rgb(8,4,0);
     --buttons:rgb(0, 12, 12);
     --img-cancel: url(images/cancel-svgrepo-com-DarkMode.svg);
     --img-chkbox:url(images/check-box-svgrepo-com-DarkMode.svg);
@@ -1593,5 +1596,14 @@ input:focus {
 .darkmode span[ref]:hover, .darkmode .strnum:hover {
     box-shadow: inset 0 -1.5em 0px 0px rgba(255, 223, 117, 0.663),
     0 5px 5px -2px var(--shadow-orange)!important;
- 
+}
+.darkmode #fontchange {
+    background-color: #000000;
+}
+.darkmode #refnav .bible_nav *:hover, .darkmode #refnav .tmp_hlt {
+    background-color: var(--ref-img);
+    box-shadow: 0px 3px 0px 0px var(--vhlt-border), 0px -3px 0px 0px var(--vhlt-border);
+}
+.darkmode ::selection {
+    background-color: purple;
 }
