--- a/bibleApp.css
+++ b/bibleApp.css
@@ -275,6 +275,9 @@ code{position: relative; padding-top: 5px;}
     font-size: large;
     font-weight: bold;
 }
+.note_temp_holder {
+    overflow: hidden;
+}
 .note_edit_button{
     background: none;
     cursor: pointer;
@@ -1161,8 +1164,8 @@ span.vmultiple.noted code #verse_notes_button {
 #topbartogglebtn {
     position:absolute;
     top:calc(100% + 2.5px);
-    scale: 1.2;
-    right:0;
+    transform: scale(2);
+    right: 1em;
     width: 1.35rem;
     height: 1.15rem;
     background: var(--ref-img);
@@ -1410,7 +1413,7 @@ button .checkboxreplacement:has(input[type="checkbox"]) {
     margin-right: 0.1em;
     /* border: solid #d9d9d9; */
     flex-basis: 100%;
-    scale: 0.7;
+    transform: scale(0.7);
     position: absolute;
     left: 0;
 }
@@ -1509,7 +1512,7 @@ input:focus {
     border-top-right-radius: 8px;
 }
 #strongsnum_inputholder #strongsnum_srchbtn img {
-    scale: 0.6;
+    transform: scale(0.6);
 }
 #strongsdefinitionwindow #strongsdefinition_text {
     overflow-x: hidden;
