--- a/bibleApp-2.css
+++ b/bibleApp-2.css
@@ -1,33 +1,3 @@
-@media screen and (min-device-width: 1025px) {
-    /* #ref_search_versions_holder #refdiv, */
-    #ref_search_versions_holder #searchdiv {
-        display: inline-grid!important;/* TO Overide the display:flex */
-        max-width: 300px!important;
-    }
-    #searchdiv input {
-        width: 100%;
-    }
-    #searchdiv::after,
-    #searchdiv input {
-      grid-area: 1/2;
-      padding: 0.25em;
-      min-width: 150px!important;
-      -webkit-appearance: none;
-         -moz-appearance: none;
-              appearance: none;
-      border: none;
-    }
-    #searchdiv::after {
-      background: none;
-      content: attr(data-value) " ";
-      height: 0;
-      visibility: hidden;
-      white-space: pre-wrap;
-    }
-    #searchdiv #forwordsearch {
-        grid-area: 1/3;
-    }
-}
 @media screen and (max-device-width: 912px) {
     #togglenavbtn {
         min-width: 60.5px;
@@ -35,13 +5,49 @@
     #togglenavbtn::before {
         font-size: 50px;
     }
-    /* #refnav #app_settings>button {
-        font-size: 35.5px;
-        overflow: hidden;
-        width: 60px!important;
-        min-width: 60px;
-        padding: 8px 2px;
-    } */
+}
+
+/* Make search input grow with text till max-width */
+@media screen and (min-device-width: 912px) {
+    #searchdiv {
+        display: inline-grid;
+        vertical-align: top;
+        align-items: center;
+        max-width: 300px;
+        max-width: 100%;
+    }
+    #searchdiv #titlebar_show_searchsettings {
+        grid-area: 1/1;
+        height:100%;
+    }
+    #searchdiv #forwordsearch {
+        grid-area: 1/3;
+        height:100%;
+    }
+    #searchdiv input#wordsearch {
+        font-size: var(--fontsize-refnsearch);
+        width: 100%;
+    }
+    #searchdiv:before {
+        white-space: nowrap;
+        padding-left: 0.25em;
+        height: 0;
+        visibility: hidden;
+    }
+    #searchdiv input#wordsearch,
+    #searchdiv:before {
+        content: attr(data-value);
+        min-width: 9em;
+        grid-area: 1/2;
+        height:100%;
+        font: inherit;
+        margin: 0;
+        border: none;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+            appearance: none; 
+        resize:both;
+    }
 }
 @media screen and (max-device-width: 540px) {
      :root {
