--- a/bibleApp.css
+++ b/bibleApp.css
@@ -1228,6 +1228,7 @@ border-right: var(--col2-border) solid auto!important;
     width: calc(var(--width-sidebuttons) * 1);
     height: calc(var(--width-sidebuttons) * 0.8);
     border-radius: 1px;
+    padding: 0
 }
 #topbartogglebtn span {
     margin-top: 0px;
@@ -1737,4 +1738,45 @@ input:focus {
 }
 .darkmode #context_menu code button.cmenusrchbtn img {
     width: 1.4em;
+}
+/* SEARCH ICON WITH CSS DIV */
+.magnifying_glass {
+    /* font-size: 10em; */
+    display: inline-block;
+    width: 0.5em;
+    box-sizing: content-box;
+    height: 0.5em;
+    border: 0.1em solid black;
+    position: relative;
+    border-radius: 50%;
+    margin-bottom:0.15em;
+    box-shadow: inset -0.05em -0.09em 0em 0.2em #80808078!important;
+}
+.magnifying_glass:before {
+    content: "";
+    display: inline-block;
+    position: absolute;
+    right: 0.25em;
+    bottom: -0.2em;
+    border-width: 1em;
+    background: black;
+    width: 0.45em;
+    height: 0.08em;
+    transform: rotate(-60deg);
+}
+.darkmode .magnifying_glass {
+    border: 0.1em solid white!important;
+    box-shadow: inset -0.05em -0.09em 0em 0.2em #8ebdf9e0!important;
+}
+.darkmode .magnifying_glass:before {
+    background: white;
+}
+#clipart {
+    clip-path: polygon(26% 0, 50% 50%, 76% 0, 100% 0, 50% 100%, 0 0);
+    background: var(--grey) !important;
+    width: 2em;
+    height: 1.5em;
+}
+#topbartogglebtn.active_button #clipart {
+    clip-path: polygon(0% 100%, 50% 0%, 100% 100%, 75% 100%, 50% 50%, 25% 100%);
 }
